--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HMSLIMA</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" defer></script>
 </head>
-<body>
+<body onload="typewrite('type')">
     <nav>
         <div><img src="img/hmslima.jpg" alt="Photo" class="hiddenLogo imgLogo"></div>
 
@@ -16,15 +16,15 @@
             <img src="img/hmslima.jpg" alt="Photo" class="imgLogo imgLogoMenu">
 
             <ul>
-                <li class="menuPrincipalItem"><a href="#about" class="menuLink">About</a></li>
-                <li class="menuPrincipalItem"><a href="#programmingprojects" class="menuLink">Programming projects</a></li>
-                <li class="menuPrincipalItem"><a href="#otherprojects" class="menuLink">Other projects</a></li>
+                <li class="menuItem menuPrincipalItem"><a href="#about" class="menuLink">About</a></li>
+                <li class="menuItem menuPrincipalItem"><a href="#programmingprojects" class="menuLink">Programming projects</a></li>
+                <li class="menuItem menuPrincipalItem"><a href="#otherprojects" class="menuLink">Other projects</a></li>
             </ul>
 
             <ul class="menuLang">
-                <li class="menuLangItem contrastCharacter"><a href="#" onclick="changeBackground()" class="menuLink">🌓︎</a></li>
-                <li class="menuLangItem">Em Português</li>
-                <li class="menuLangItem">En Español</li>
+                <li class="menuItem menuLangItem contrastCharacter"><a href="#" onclick="changeBackground()" class="menuLink">🌓︎</a></li>
+                <li class="menuItem menuLangItem">Em Português</li>
+                <li class="menuItem menuLangItem">En Español</li>
             </ul>
         </div>
     </nav>
@@ -42,18 +42,32 @@
 
     <section id="about">
         <div class="SmallContainer">
-            <p>Welcome to the website of Henrique Matheus da Silva Lima, a Brazilian Back-End Developer passionate for programmation.</p>
+
+            <div id="type">
+                Welcome to the website of Henrique Matheus da Silva Lima, a Brazilian programmer passionate about software development.
+            </div>
+
+            <noscript><p>Welcome to the website of Henrique Matheus da Silva Lima, a Brazilian programmer passionate about software development.</p></noscript>
 
             <br><br>
 
             <h2 id="my_stacks">My stacks:</h2>
 
             <ul>
-                <li>JavaScript</li>
-                <li>Java</li>
-                <li>Python</li>
-                <li>C/C++</li>
+                <li>
+                    <strong>Web development <em>(with focus on the back-end)</em></strong>
+                    <ul>
+                        <li>HTML 5</li>
+                        <li>CSS 3</li>
+                        <li>JavaScript / TypeScript</li>
+                    </ul>
+                </li>
+                <li><strong>Java</strong></li>
+                <li><strong>C/C++</strong></li>
             </ul>
+            
+            <br><br>
+            <p>You can see what I can do in <a href="#programmingprojects">Programming projects</a>.</p>
 
             <br><br>
 
@@ -75,14 +89,14 @@
                     <h3>JS-Dictionar</h3>
                     <p>A powerful dynamic dictionary contained in a single HTML file.</p>
                     <br>
-                    <a href="https://github.com/hmslima/JS-Dictionar" target="_blank">GitHUb page</a>
+                    <a href="https://github.com/hmslima/JS-Dictionar" target="_blank">GitHub page</a>
                 </div>
 
                 <div class="card">
                     <h3>JS-Sambahsapronunciator</h3>
                     <p>A pronunciator of words to IPA and SPT for Sambahsa Mundialect.</p>
                     <br>
-                    <a href="https://github.com/hmslima/JS-Sambahsapronunciator" target="_blank">GitHUb page</a>
+                    <a href="https://github.com/hmslima/JS-Sambahsapronunciator" target="_blank">GitHub page</a>
                 </div>
             </div>
         </div>
