--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body onload="typewrite('write')">
     <nav>
-        <div><img src="img/hmslima.jpg" alt="Photo" class="hiddenLogo imgLogo"></div>
+        <div><img src="img/photos/hmslima.jpg" alt="Photo" class="hiddenLogo imgLogo"></div>
 
         <div class="BigContainer flex wrap menu">
-            <img src="img/hmslima.jpg" alt="Photo" class="imgLogo imgLogoMenu">
+            <img src="img/photos/hmslima.jpg" alt="Photo" class="imgLogo imgLogoMenu">
 
             <ul>
                 <li class="menuItem menuPrincipalItem"><a href="#about" class="menuLink">About</a></li>
@@ -54,38 +54,82 @@
 
             <h2 id="my_stacks">My stacks:</h2>
 
-            <ul>
-                <li>
-                    <strong>Web development <em>(with focus on the back-end)</em></strong>
-                    <ul>
-                        <li>HTML 5</li>
-                        <li>CSS 3</li>
-                        <li>JavaScript
-                            <ul>
-                                <li>Node.js</li>
-                                <li>React.js</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Java</strong>
-                    <ul>
-                        <li>Spring</li>
-                    </ul>
-                </li>
-            </ul>
+            <div class="cardContainer">
+
+                <div class="cardStacks">
+                    <div class="cardTitleStacks">Java Development</div>
+                    <div class="cardBody">
+                        <div class="stack">
+                            JAVA
+                            <img src="img/stacks/java.svg" alt="Java">
+                        </div>
+                        <div class="stack">
+                            JDBC
+                            <img src="img/stacks/jdbc.svg" alt="JDBC">
+                        </div>
+                        <div class="stack">
+                            Spring
+                            <img src="img/stacks/spring.svg" alt="Spring">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cardStacks">
+                    <div class="cardTitleStacks">Web Development</div>
+                    <div class="cardBody">
+                        <div class="stack">
+                            HTML
+                            <img src="img/stacks/html.svg" alt="HTML">
+                        </div>
+                        <div class="stack">
+                            CSS
+                            <img src="img/stacks/css.svg" alt="CSS">
+                        </div>
+                        <div class="stack">
+                            JavaScript
+                            <img src="img/stacks/javascript.svg" alt="JavaScript">
+                        </div>
+                        <div class="stack">
+                            Node.js
+                            <img src="img/stacks/nodejs.svg" alt="Node.js">
+                        </div>
+                        <div class="stack">
+                            PHP
+                            <img src="img/stacks/php.svg" alt="PHP">
+                        </div>
+                        <div class="stack">
+                            React.js
+                            <img src="img/stacks/react.svg" alt="React.js">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cardStacks">
+                    <div class="cardTitleStacks">Other</div>
+                    <div class="cardBody">
+                        <div class="stack">
+                            C++
+                            <img src="img/stacks/cpp.svg" alt="C++">
+                        </div>
+                        <div class="stack">
+                            SQL
+                            <img src="img/stacks/sql.svg" alt="SQL">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             
-            <br><br>
+            <br>
             <p>You can see what I can do in <a href="#programmingprojects">Programming projects</a>.</p>
 
             <br><br>
 
             <h2 id="contact">Contact</h2>
 
-            <p><img src="img/github.svg" class="imgText"> <a href="https://github.com/hmslima/" target="_blank">GitHub</a></p>
+            <p><img src="img/icons/github.svg" class="imgText"> <a href="https://github.com/hmslima/" target="_blank">GitHub</a></p>
 
-            <p><img src="img/linkedin.svg" class="imgText"> <a href="https://www.linkedin.com/in/henrique-matheus-da-silva-lima/" target="_blank">LinkedIn</a></p>
+            <p><img src="img/icons/linkedin.svg" class="imgText"> <a href="https://www.linkedin.com/in/henrique-matheus-da-silva-lima/" target="_blank">LinkedIn</a></p>
 
         </div>
     </section>
