--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body onload="typewrite('write')">
     <nav>
-        <div><img src="img/photos/hmslima.jpg" alt="Photo" class="hiddenLogo imgLogo"></div>
+        <div><img src="assets/img/photos/hmslima.jpg" alt="Photo" class="hiddenLogo imgLogo"></div>
 
         <div class="BigContainer flex wrap menu">
-            <img src="img/photos/hmslima.jpg" alt="Photo" class="imgLogo imgLogoMenu">
+            <img src="assets/img/photos/hmslima.jpg" alt="Photo" class="imgLogo imgLogoMenu">
 
             <ul>
                 <li class="menuItem menuPrincipalItem"><a href="#about" class="menuLink">About</a></li>
@@ -52,68 +52,82 @@
 
             <br><br>
 
-            <h2 id="my_stacks">My stacks:</h2>
+            <div class="titleCenter" id="my_stacks">My stacks</div>
 
             <div class="cardContainer">
 
                 <div class="cardStacks">
                     <div class="cardTitleStacks">Java Development</div>
-                    <div class="cardBody">
+                    <div class="cardBodyStacks">
                         <div class="stack">
                             JAVA
-                            <img src="img/stacks/java.svg" alt="Java">
+                            <img src="assets/img/stacks/java.svg" alt="Java">
                         </div>
                         <div class="stack">
                             JDBC
-                            <img src="img/stacks/jdbc.svg" alt="JDBC">
+                            <img src="assets/img/stacks/jdbc.svg" alt="JDBC">
                         </div>
                         <div class="stack">
                             Spring
-                            <img src="img/stacks/spring.svg" alt="Spring">
+                            <img src="assets/img/stacks/spring.svg" alt="Spring">
                         </div>
                     </div>
                 </div>
 
                 <div class="cardStacks">
-                    <div class="cardTitleStacks">Web Development</div>
-                    <div class="cardBody">
-                        <div class="stack">
-                            HTML
-                            <img src="img/stacks/html.svg" alt="HTML">
-                        </div>
-                        <div class="stack">
-                            CSS
-                            <img src="img/stacks/css.svg" alt="CSS">
-                        </div>
-                        <div class="stack">
-                            JavaScript
-                            <img src="img/stacks/javascript.svg" alt="JavaScript">
-                        </div>
+                    <div class="cardTitleStacks">More Back-end</div>
+                    <div class="cardBodyStacks">
                         <div class="stack">
                             Node.js
-                            <img src="img/stacks/nodejs.svg" alt="Node.js">
+                            <img src="assets/img/stacks/nodejs.svg" alt="Node.js">
                         </div>
                         <div class="stack">
                             PHP
-                            <img src="img/stacks/php.svg" alt="PHP">
+                            <img src="assets/img/stacks/php.svg" alt="PHP">
+                        </div>
+                        <div class="stack">
+                            C++
+                            <img src="assets/img/stacks/cpp.svg" alt="C++">
+                        </div>
+                        <div class="stack">
+                            SQL
+                            <img src="assets/img/stacks/sql.svg" alt="SQL">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cardStacks">
+                    <div class="cardTitleStacks">Front-end</div>
+                    <div class="cardBodyStacks">
+                        <div class="stack">
+                            HTML
+                            <img src="assets/img/stacks/html.svg" alt="HTML">
+                        </div>
+                        <div class="stack">
+                            CSS
+                            <img src="assets/img/stacks/css.svg" alt="CSS">
+                        </div>
+                        <div class="stack">
+                            JavaScript
+                            <img src="assets/img/stacks/javascript.svg" alt="JavaScript">
                         </div>
                         <div class="stack">
                             React.js
-                            <img src="img/stacks/react.svg" alt="React.js">
+                            <img src="assets/img/stacks/react.svg" alt="React.js">
                         </div>
                     </div>
                 </div>
 
                 <div class="cardStacks">
                     <div class="cardTitleStacks">Other</div>
-                    <div class="cardBody">
+                    <div class="cardBodyStacks">
                         <div class="stack">
-                            C++
-                            <img src="img/stacks/cpp.svg" alt="C++">
+                            Design Patterns
+                            <img src="assets/img/stacks/designpatterns.svg" alt="Design Patterns">
                         </div>
                         <div class="stack">
-                            SQL
-                            <img src="img/stacks/sql.svg" alt="SQL">
+                            Scrum
+                            <img src="assets/img/stacks/scrum.svg" alt="Scrum">
                         </div>
                     </div>
                 </div>
@@ -127,9 +141,13 @@
 
             <h2 id="contact">Contact</h2>
 
-            <p><img src="img/icons/github.svg" class="imgText"> <a href="https://github.com/hmslima/" target="_blank">GitHub</a></p>
+            <p><img src="assets/img/icons/email.svg" class="imgText"> <a href="mailto:hmslima1992@gmail.com" target="_blank">E-mail</a></p>
 
-            <p><img src="img/icons/linkedin.svg" class="imgText"> <a href="https://www.linkedin.com/in/henrique-matheus-da-silva-lima/" target="_blank">LinkedIn</a></p>
+            <p><img src="assets/img/icons/github.svg" class="imgText"> <a href="https://github.com/hmslima/" target="_blank">GitHub</a></p>
+
+            <p><img src="assets/img/icons/linkedin.svg" class="imgText"> <a href="https://www.linkedin.com/in/henrique-matheus-da-silva-lima/" target="_blank">LinkedIn</a></p>
+
+            <p><img src="assets/img/icons/twitter.svg" class="imgText"> <a href="https://twitter.com/hmslima_" target="_blank">Twitter</a></p>
 
         </div>
     </section>
