--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </nav>
     <div class="nav_space"></div>
     <div id="menu">
-        <a class="navLink menuItemLink" href="#about">About</a>
+        <a class="navLink menuItemLink" href="#my_stacks">My Stacks</a>
+        <a class="navLink menuItemLink" href="#contact">Contact</a>
         <a class="navLink menuItemLink" href="#programmingprojects">Programing projects</a>
         <a class="navLink menuItemLink" href="#miscellaneous">Miscellaneous</a>
     </div>
@@ -45,9 +46,9 @@
 
             <noscript><p>Welcome to the website of Henrique Matheus da Silva Lima, a Brazilian programmer passionate about software development.</p></noscript>
 
-            <br><br>
 
-            <div class="titleCenter" id="my_stacks">My stacks</div>
+            <div class="nav_space" id="my_stacks"></div>
+            <div class="titleCenter">My stacks</div>
 
             <div class="cardContainer">
 
@@ -132,8 +133,8 @@
             <br>
             <p>You can see what I can do in <a href="#programmingprojects">Programming projects</a>.</p>
 
-            <br><br>
 
+            <div class="nav_space" id="contact"></div>
             <h2 id="contact">Contact</h2>
 
             <p><img src="assets/img/icons/email.svg" class="imgText"> <a href="mailto:hmslima1992@gmail.com" target="_blank">E-mail</a></p>
@@ -147,7 +148,8 @@
         </div>
     </section>
 
-    <section id="programmingprojects" class="new_section">
+    <section class="new_section">
+        <div class="nav_space" id="programmingprojects"></div>
         <div class="SmallContainer">
             <h1>My Principal Programming Projects</h1>
 
@@ -179,7 +181,8 @@
         </div>
     </section>
 
-    <section id="miscellaneous" class="new_section">
+    <section class="new_section">
+        <div id="miscellaneous"></div>
         <div class="SmallContainer">
             <h1>Miscellaneous</h1>
         </div>
