--- a/index.html
+++ b/index.html
@@ -40,15 +40,18 @@
         <div class="SmallContainer">
 
             <br>
-            <div id="write">
-                Welcome to the website of Henrique Matheus da Silva Lima, a Brazilian programmer passionate about software development.
+            <div class="imgTextIntroduction">
+                <img src="assets/img/photos/hmslima.jpg" class="mainPhoto">
+                <div id="write">
+                    Welcome to the website of Henrique Matheus da Silva Lima, a Brazilian programmer passionate about software development.
+                </div>
             </div>
-
+            
             <noscript><p>Welcome to the website of Henrique Matheus da Silva Lima, a Brazilian programmer passionate about software development.</p></noscript>
 
 
             <div class="nav_space" id="my_stacks"></div>
-            <div class="titleCenter">My stacks</div>
+            <h1>My stacks</h1>
 
             <div class="cardContainer">
 
@@ -135,7 +138,7 @@
 
 
             <div class="nav_space" id="contact"></div>
-            <h2 id="contact">Contact</h2>
+            <h1>Contact</h1>
 
             <p><img src="assets/img/icons/email.svg" class="imgText"> <a href="mailto:hmslima1992@gmail.com" target="_blank">E-mail</a></p>
 
