--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                             <img src="assets/img/stacks/javascript.svg" alt="JavaScript">
                         </div>
                         <div class="stack">
-                            React.js
-                            <img src="assets/img/stacks/react.svg" alt="React.js">
+                            Angular
+                            <img src="assets/img/stacks/angular.svg" alt="Angular">
                         </div>
                     </div>
                 </div>
@@ -142,6 +142,10 @@
                         <div class="stack">
                             Git
                             <img src="assets/img/stacks/git.svg" alt="Git">
+                        </div>
+                        <div class="stack">
+                            MVC
+                            <img src="assets/img/stacks/MVC.svg" alt="MVC">
                         </div>
                         <div class="stack">
                             Scrum
